# pulumi-azure

./: .gitignore  README.md
aks/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
aks/helm/argocd/: values.dev.yaml  values.prod.yaml
aks/helm/privatebin/: values.dev.yaml  values.prod.yaml
quickstart/: __main__.py  index.html
