[tool.poetry]
name = "pulumi-py-aks"
version = "1.0.0"
description = ""
authors = ["Bastien Lalos <nobody@nobody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "^3.80.0"
pulumi-azure-native = "^2.5.0"
pulumi-azuread = "^5.40.0"
pulumi-random = "^4.13.2"
pulumi-tls = "^4.10.0"
pulumi-kubernetes = "^4.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
